loopfor.LoopFor.scala.code
var nbPas:Int = 0
while (estSurBiscuit==false) {
  avance()
  nbPas=NbPas+1
} prendBiscuit()
for (i <- 1 to nbPas) {
  recule()
} poseBiscuit()
